--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Tristan Nemoz"
-  avatar           : "/assets/images/profile.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : # "/assets/images/profile.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am a first year PhD Student in the [IQA Group](https://iqa.telecom-paris.fr/) supervised by Romain Alléaume. My field of research is Quantum Cryptography, though I also am interested in Quantum Computation and Quantum Machine Learning."
   location         :
   email            :
